--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,25 @@ body {
 .intro-title .highlight {
     color: red;
 }
+.intro-title-about {
+    font-size: clamp(1.5rem, 8vw, 4rem); /* Scales between 2.5rem and 8rem based on viewport width */
+    line-height: 0.9em;
+    color: rgb(64, 126, 184);
+    font-weight: 700; /* Matches .bold class */
+    margin: 0;
+}
 
+.intro-title-about .highlight {
+    color: red;
+}
+
+.intro-text-about {
+    max-width: 400px;
+    /* color: rgb(138, 136, 136); */
+    font-size: 1rem;
+    margin-top: 15px;
+    
+}
 .intro-text {
     max-width: 400px;
     color: rgb(138, 136, 136);
@@ -146,7 +164,7 @@ body {
     justify-content: center; /* Horizontally center text */
     align-items: center; /* Vertically center text */
     box-sizing: border-box; /* Includes padding in width/height */
-    border-radius: 5px
+    border-radius: 5px;
 }
 
 
@@ -1429,4 +1447,39 @@ body {
     .contact-form-container {
         text-align: center;
     }
+}
+
+
+
+.blue-card{
+    background-color: #2a5485;   
+}
+.red-card{
+    background-color: #ca2c2c;
+}
+.yellow-card{
+    background-color: #ffb428;
+}
+.green-card{
+    background-color: #28ad6b;
+}
+
+.exp-card{
+    min-height: 400px;
+    padding: 30px 20px;
+    border-radius: 5px;
+}
+
+.exp-card img{
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+}
+.exp-card h3{
+    margin-top: 30px;
+    color: white;
+}
+.exp-card p{
+    margin-top: 20px;
+    color: white;
 }
